// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-comment-event Renders \`create-comment-event\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Add comment
      </span>
    </div>
    <div
      class="text"
    >
      <div
        class="layout column"
      >
        <!---->
        <c-name-field
          label="Comment"
          name="comment"
          required=""
        />
      </div>
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Save changes
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`create-comment-event Renders \`create-comment-event\` with items 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Add comment
      </span>
    </div>
    <div
      class="text"
    >
      <div
        class="layout column"
      >
        <alarm-general-table-stub
          items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        />
        <hr
          aria-orientation="horizontal"
          class="my-3 v-divider theme--light"
          role="separator"
        />
        <c-name-field
          label="Comment"
          name="comment"
          required=""
        />
      </div>
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Save changes
        </span>
      </button>
    </div>
  </div>
</form>
`;
